manifests/workloads/archive/harbor/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: harbor-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: harbor.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/name: harbor
    app.kubernetes.io/instance: harbor
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`harbor.danmanners.com`)
      kind: Rule
      services:
        - name: harbor
          port: 443
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`harbor.danmanners.com`)
      kind: Rule
      services:
        - name: harbor
          port: 443
  tls:
    secretName: harbor-cert
